[gd_scene load_steps=7 format=3 uid="uid://cq4s0sxpegncc"]

[ext_resource type="Script" path="res://scripts/japanese/note.gd" id="1_ub1un"]
[ext_resource type="Texture2D" uid="uid://b6a3raijhgxb4" path="res://assets/japanese/beat.png" id="2_ynhga"]
[ext_resource type="FontFile" uid="uid://drq86l6656w0b" path="res://assets/font/Early GameBoy.ttf" id="3_0eppu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4rtdt"]
size = Vector2(2, 3)

[sub_resource type="Curve" id="Curve_td133"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.4, 0), 0.0, 0.0, 0, 0, Vector2(0.617143, -142.857), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Curve" id="Curve_a8feb"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.114286, 1), 0.0, 0.0, 0, 0, Vector2(0.685714, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="Note" type="Area2D" groups=["note"]]
script = ExtResource("1_ub1un")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.352941, 0.858824, 0.980392, 1)
texture = ExtResource("2_ynhga")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4rtdt")

[node name="DestroyTimer" type="Timer" parent="."]

[node name="LabelHolder" type="Node2D" parent="."]

[node name="Label" type="Label" parent="LabelHolder"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -4.0
offset_right = 10.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_0eppu")
theme_override_font_sizes/font_size = 6
horizontal_alignment = 1

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
lifetime = 0.6
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
linear_accel_max = 2.0
linear_accel_curve = SubResource("Curve_td133")
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_a8feb")
color = Color(1, 0.639216, 0.231373, 1)
hue_variation_min = -1.0
hue_variation_max = 1.0

[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
